Bug 1397925 - Refresh OSPreferences mSystemLocales when intl.locale.os changes. r=rnewman

MozReview-Commit-ID: oJdWUXwhZw

--HG--
extra : rebase_source : f66fe06990d4d55d39e9a7924c2d6039aa3c6772